# eccgen

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.adoc  README.md  pyproject.toml  requirements_lock_3_12.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi_release.yml
eccgen/: BUILD.bazel  __init__.py  __main__.py  eccgen.py  hsiao_secded.py  hsiao_secded_test.py  matrix_parser.py  matrix_parser_test.py
eccgen/dslx_codegen/: BUILD.bazel  dslx_codegen.py  secded_decoder.x.jinja2  secded_encoder.x.jinja2
eccgen/jinja2/: BUILD.bazel  br_ecc_secded_decoder.sv.jinja2  br_ecc_secded_encoder.sv.jinja2  secded_decoder.x.jinja2  secded_encoder.x.jinja2
eccgen/matrices/: BUILD.bazel
eccgen/sv_codegen/: BUILD.bazel  br_ecc_secded_decoder.sv.jinja2  br_ecc_secded_encoder.sv.jinja2  sv_codegen.py
