load("@rules_python//python/uv:lock.bzl", "lock")

package(default_visibility = ["//visibility:public"])

lock(
    name = "requirements_3_12",
    srcs = ["pyproject.toml"],
    out = "requirements_lock_3_12.txt",
    args = [
        "--group",
        "dev",
    ],
    python_version = "3.12",
)
