[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eccgen"
version = "0.1.0"
description = "ECCGen: Error Correcting Code Generator"
readme = { file = "README.adoc", content-type = "text/asciidoc" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "The ECCGen contributors"}]
dependencies = [
    "numpy>=2.3.2",
]

[project.scripts]
eccgen = "eccgen.eccgen:main"

[project.urls]
Homepage = "https://github.com/xlsynth/eccgen"
Repository = "https://github.com/xlsynth/eccgen"

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pre-commit>=4.5.1",
    "ruff>=0.13.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.setuptools.packages.find]
include = ["eccgen*"]

[tool.setuptools.package-data]
eccgen = ["matrices/*.txt"]
