[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "eccgen"
version = "0.1.1"
description = "ECCGen: Error Correcting Code Generator"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "The ECCGen contributors"}]
dependencies = [
    "numpy>=2.3.2",
]

[project.scripts]
eccgen = "eccgen.eccgen:main"

[project.urls]
Homepage = "https://github.com/xlsynth/eccgen"
Repository = "https://github.com/xlsynth/eccgen"

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pre-commit>=4.5.1",
    "ruff>=0.13.0",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.hatch.build.targets.wheel]
packages = ["eccgen"]

# Exclude Bazel files from the sdist.
[tool.hatch.build.targets.sdist]
include = [
    "/eccgen",
    "/README.md",
    "/LICENSE",
]
