# SPDX-License-Identifier: Apache-2.0

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:private"])

py_library(
    name = "hsiao_secded",
    srcs = ["hsiao_secded.py"],
    visibility = ["//visibility:public"],
    deps = ["@eccgen-pypi//numpy:pkg"],
)

py_test(
    name = "hsiao_secded_test",
    srcs = ["hsiao_secded_test.py"],
    deps = [
        ":hsiao_secded",
        "@eccgen-pypi//numpy:pkg",
        "@eccgen-pypi//parameterized:pkg",
    ],
)

py_library(
    name = "matrix_parser",
    srcs = ["matrix_parser.py"],
    visibility = ["//visibility:public"],
    deps = ["@eccgen-pypi//numpy:pkg"],
)

py_test(
    name = "matrix_parser_test",
    srcs = ["matrix_parser_test.py"],
    deps = [
        ":matrix_parser",
        "@eccgen-pypi//numpy:pkg",
    ],
)

py_binary(
    name = "eccgen",
    srcs = ["eccgen.py"],
    visibility = ["//visibility:public"],
    deps = [":hsiao_secded"],
)
