# Copyright 2024-2025 The XLSynth and ECCGen Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//eccgen:__pkg__"])

py_binary(
    name = "dslx_codegen",
    srcs = ["dslx_codegen.py"],
    deps = [
        "//eccgen:matrix_parser",
        "@eccgen-pypi//jinja2:pkg",
    ],
)
